--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://jacob-blomq.github.io/"
+baseURL = "http://jacob-blomq.github.io"
 languageCode = "en-us"
 title = "My Hugo Resume"
 theme = "resume"
